// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DebugHistoryMiddleware > correctly handles async updates 1`] = `
{
  "0_q1": [
    {
      "dispatchedUpdate": {
        "type": "promise",
        "value": Promise {},
      },
      "initialState": {
        "type": "value",
        "value": "FOO",
      },
      "isCanceled": false,
      "phase": "promise",
      "source": "promise",
      "stackTrace": undefined,
      "time": 1600000000100,
      "updateID": "5",
    },
    {
      "dispatchedUpdate": {
        "type": "function",
        "value": [Function],
      },
      "initialState": {
        "type": "value",
        "value": "FOO",
      },
      "isCanceled": false,
      "phase": "function",
      "source": "function",
      "stackTrace": undefined,
      "time": 1600000000200,
      "updateID": "6",
    },
    {
      "dispatchedUpdate": {
        "type": "promise",
        "value": Promise {},
      },
      "initialState": {
        "type": "value",
        "value": "FOO",
      },
      "isCanceled": false,
      "phase": "promise",
      "source": "function",
      "stackTrace": undefined,
      "time": 1600000000300,
      "updateID": "6",
    },
    {
      "dispatchedUpdate": {
        "type": "value",
        "value": "BAR",
      },
      "initialState": {
        "type": "value",
        "value": "FOO",
      },
      "isCanceled": false,
      "phase": "value",
      "source": "promise",
      "stackTrace": undefined,
      "time": 1600000000400,
      "updateID": "5",
    },
    {
      "dispatchedUpdate": {
        "type": "value",
        "value": "BAZ",
      },
      "initialState": {
        "type": "value",
        "value": "BAR",
      },
      "isCanceled": false,
      "phase": "value",
      "source": "function",
      "stackTrace": undefined,
      "time": 1600000000500,
      "updateID": "6",
    },
  ],
}
`;

exports[`DebugHistoryMiddleware > correctly handles procedures 1`] = `
{
  "0_q1": [],
  "1_q2": [
    {
      "dispatchedUpdate": {
        "type": "value",
        "value": {
          "loading": false,
          "value": undefined,
        },
      },
      "initialState": {
        "type": "value",
        "value": {
          "loading": false,
          "value": undefined,
        },
      },
      "isCanceled": false,
      "phase": "value",
      "source": "value",
      "stackTrace": undefined,
      "time": 1600000000100,
      "updateID": "8",
    },
    {
      "dispatchedUpdate": {
        "type": "procedure",
        "value": [Function],
      },
      "initialState": {
        "type": "value",
        "value": {
          "loading": false,
          "value": undefined,
        },
      },
      "isCanceled": false,
      "phase": "procedure",
      "source": "procedure",
      "stackTrace": undefined,
      "time": 1600000000200,
      "updateID": "9",
    },
    {
      "dispatchedUpdate": {
        "type": "function",
        "value": [Function],
      },
      "initialState": {
        "type": "value",
        "value": {
          "loading": false,
          "value": undefined,
        },
      },
      "isCanceled": false,
      "phase": "function",
      "source": "procedure",
      "stackTrace": undefined,
      "time": 1600000000300,
      "updateID": "9",
    },
    {
      "dispatchedUpdate": {
        "type": "value",
        "value": {
          "loading": true,
          "value": undefined,
        },
      },
      "initialState": {
        "type": "value",
        "value": {
          "loading": false,
          "value": undefined,
        },
      },
      "isCanceled": false,
      "phase": "value",
      "source": "procedure",
      "stackTrace": undefined,
      "time": 1600000000400,
      "updateID": "9",
    },
    {
      "dispatchedUpdate": {
        "type": "function",
        "value": [Function],
      },
      "initialState": {
        "type": "value",
        "value": {
          "loading": true,
          "value": undefined,
        },
      },
      "isCanceled": false,
      "phase": "function",
      "source": "procedure",
      "stackTrace": undefined,
      "time": 1600000000500,
      "updateID": "9",
    },
    {
      "dispatchedUpdate": {
        "type": "value",
        "value": {
          "loading": true,
          "value": "foo",
        },
      },
      "initialState": {
        "type": "value",
        "value": {
          "loading": true,
          "value": undefined,
        },
      },
      "isCanceled": false,
      "phase": "value",
      "source": "procedure",
      "stackTrace": undefined,
      "time": 1600000000600,
      "updateID": "9",
    },
    {
      "dispatchedUpdate": {
        "type": "value",
        "value": {
          "loading": false,
          "value": "bar",
        },
      },
      "initialState": {
        "type": "value",
        "value": {
          "loading": true,
          "value": "foo",
        },
      },
      "isCanceled": false,
      "phase": "value",
      "source": "procedure",
      "stackTrace": undefined,
      "time": 1600000000700,
      "updateID": "9",
    },
  ],
}
`;

exports[`DebugHistoryMiddleware > correctly saves updates to the history tracker 1`] = `
{
  "0_q1": [
    {
      "dispatchedUpdate": {
        "type": "value",
        "value": "BAR",
      },
      "initialState": {
        "type": "value",
        "value": "FOO",
      },
      "isCanceled": false,
      "phase": "value",
      "source": "value",
      "stackTrace": undefined,
      "time": 1600000000100,
      "updateID": "2",
    },
    {
      "dispatchedUpdate": {
        "type": "function",
        "value": [Function],
      },
      "initialState": {
        "type": "value",
        "value": "BAR",
      },
      "isCanceled": false,
      "phase": "function",
      "source": "function",
      "stackTrace": undefined,
      "time": 1600000000200,
      "updateID": "3",
    },
    {
      "dispatchedUpdate": {
        "type": "value",
        "value": "BAZ",
      },
      "initialState": {
        "type": "value",
        "value": "BAR",
      },
      "isCanceled": false,
      "phase": "value",
      "source": "function",
      "stackTrace": undefined,
      "time": 1600000000300,
      "updateID": "3",
    },
  ],
}
`;
